- Added new Pair Data structure - Added any data folder anywhere to .gitignore - Added new City constructor with just the id Aufgabe 1: - Solved Aufgabe 1 TODO check result - Prints result to cmd line